# chaosx-discord-bot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  SETUP_LINKS.md
scripts/: clear_global_commands.py  discord_invite_url.py  rebuild_index.py  test.sh
src/chaosx_bot/: __init__.py  auth.py  auto_scan.py  bot.py  catalog_validation.py  community_notes.py  config.py  event_note_ops.py  event_visuals.py  focus_trees.py  hermes_bridge.py  indexer.py  issue_duplicates.py  knowledge.py  main.py  playtest_synthesis.py  rate_limit.py  runtime_status.py  storage.py  vault_index.py  visual_cache.py  webhook_server.py
tests/: test_auto_scan.py  test_catalog_validation.py  test_chunking.py  test_community_notes.py  test_event_note_ops.py  test_event_visuals.py  test_focus_trees.py  test_hermes_bridge.py  test_issue_duplicates.py  test_knowledge.py  test_playtest_synthesis.py  test_runtime_status.py  test_safety.py  test_storage.py  test_vault_index.py  test_visual_cache.py  test_webhook_server.py
