[project]
name = "chaosx-discord-bot"
version = "0.1.0"
description = "Community Discord knowledge bot and protected operations agent for Chaos Redux."
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0,<3",
    "pydantic-settings>=2.6.0,<3",
    "aiosqlite>=0.20.0,<1",
    "aiohttp>=3.9.0,<4",
    "pyyaml>=6.0.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-asyncio>=0.24.0,<1",
]

[project.scripts]
chaosx-bot = "chaosx_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chaosx_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
